--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,76 @@
-.App {
-  text-align: center;
+body {
+  background-color: #222;
+  color: #ccc;
+  padding: 10px 24px;
+  font-family: "Signika Negative", sans-serif, Arial;
+  font-weight: 300;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.group.reorder {
+  flex-direction: row;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1 {
+  color: white;
+  font-weight: 400;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.group {
+  width: 740px;
+  height: auto;
+  padding: 4px;
+  background: #111;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  overflow: hidden;
+  color: black;
+  position: relative;
 }
 
-.App-link {
-  color: #61dafb;
+.box {
+  margin: 4px;
+  max-width: 60px;
+  max-height: 60px;
+  padding: 8px;
+  font-size: 22px;
+  line-height: 28px;
+}
+.box:nth-child(1) {
+  background: rgba(85, 102, 205, 0.7);
+}
+.box:nth-child(2) {
+  background: rgba(125, 70, 200, 0.7);
+}
+.box:nth-child(3) {
+  background: rgba(33, 150, 243, 0.7);
+}
+.box:nth-child(4) {
+  background: rgba(0, 188, 212, 0.7);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button {
+  padding: 10px 20px;
+  margin-bottom: 10px;
+}
+.logo {
+  position: absolute;
+  width: 60px;
+  bottom: 20px;
+  right: 30px;
+}
+
+.resizable {
+  position: relative;
+  overflow: hidden;
+}
+
+.resizer {
+  
+  width: 10px;
+  height: 8px;
+  background-color: black;
+
+  
+  
+  cursor: col-resize;
 }
